--- a/style/style.css
+++ b/style/style.css
@@ -5,8 +5,8 @@ body {
   /* justify-content: center; */
   align-items: center;
   align-content: center;
-  margin: 0;
   min-width: 100%;
+  margin: 0;
   padding: 0;
   overflow: hidden;
 }
@@ -38,7 +38,7 @@ body {
   /* background-color: cornflowerblue; */
 }
 
-#popUp {
+.popUp {
   border: 2em solid black;
   height: 35vh;
   width: 35vh;
@@ -49,8 +49,7 @@ body {
   align-items: center;
   display: flex;
 }
-
-#popUpBackground {
+.popUp__background {
   /* position:absolute; */
   height: 100%;
   width: 100%;
@@ -58,8 +57,7 @@ body {
   border-radius: 50%;
   opacity: 0.6;
 }
-
-#popUpResult {
+.popUp__result {
   /* text-align: center; */
   position: absolute;
   /* height: 1%; */
