--- a/style/style.scss
+++ b/style/style.scss
@@ -1,18 +1,20 @@
 body {
-    background-color: black;
+    background-color: rgb(0, 0, 0);
     display: flex;
-    flex-flow: column wrap;
-    /* justify-content: center; */
+    // flex-flow: column wrap;
+    justify-content: center;
+
     align-items : center;
-    align-content: center ;
-    min-width: 100%;
+    // align-content: center ;
+    width: 100vw;
+    height: 100vh;
+    // box-sizing: border-box;
     margin: 0;
     padding: 0;
     overflow: hidden;
-
 }
 
-#score {
+.score {
     height: 40%;
     width: 80%;
     font-size: 2em;
@@ -22,23 +24,23 @@ body {
     /* flex-wrap: wrap ; */
     flex-direction: row;
     justify-content: center;
-    
-    
     /* background-color: blueviolet; */
+    
+    &__hits {
+        max-width: 50%;
+        min-width: 50%;
+        text-align:right;
+        /* background-color: cadetblue; */
+    }
+
+    &__fails {
+        max-width: 50%;
+        min-width: 50%;
+        text-align:left;
+        /* background-color: cornflowerblue; */
+    }
 }
 
-#hits {
-    max-width: 50%;
-    min-width: 50%;
-    text-align:right;
-    /* background-color: cadetblue; */
-}
-#fails {
-    max-width: 50%;
-    min-width: 50%;
-    text-align:left;
-    /* background-color: cornflowerblue; */
-}
 
 .popUp {
     border : 2em solid black ;
@@ -49,7 +51,7 @@ body {
     position:absolute;
     justify-content: center;
     align-items: center;
-    display : flex ;
+    display : none ;
 
     &__background{
         /* position:absolute; */
@@ -75,7 +77,7 @@ body {
 }
 
 
-#errorScreen {
+.errorScreen {
     height: 100%;
     width: 100%;
     background-color: red;
@@ -131,8 +133,8 @@ body {
 }
 
 .baby1 > *{
-    border : 5px solid blue ;
-    box-shadow: 0 0 50px blue;
+    border : 5px solid red ;
+    box-shadow: 0 0 50px red;
 }   
 
 .baby2 {
