--- a/style/style.scss
+++ b/style/style.scss
@@ -1,14 +1,10 @@
 body {
     background-color: rgb(0, 0, 0);
     display: flex;
-    // flex-flow: column wrap;
     justify-content: center;
-
     align-items : center;
-    // align-content: center ;
     width: 100vw;
     height: 100vh;
-    // box-sizing: border-box;
     margin: 0;
     padding: 0;
     overflow: hidden;
@@ -43,10 +39,9 @@ body {
 
 
 .popUp {
-    border : 2em solid black ;
-    height: 35vh;
-    width: 35vh;
-    /* background-color: pink; */
+    // border : 2em solid black ;
+    height: 45vh;
+    width: 45vh;
     border-radius: 50%;
     position:absolute;
     justify-content: center;
@@ -54,7 +49,6 @@ body {
     display : none ;
 
     &__background{
-        /* position:absolute; */
         height: 100%;
         width: 100%;
         background-color: black;
@@ -63,15 +57,9 @@ body {
     
     }
     &__result {
-        /* text-align: center; */
-        position:absolute;
-        /* height: 1%; */
-        /* width: 1%; */
-        /* border-radius: 50%; */
-        font-size: 12em; 
-        /* bottom: 100%; */
-        /* left: 1vw ; */
-        /* text-align:left;  */
+        position: absolute;
+        // bottom: 1vh;
+        font-size: 34vh; 
     }
 
 }
