Rename baby id and class as children

--- a/style/style.css
+++ b/style/style.css
@@ -74,18 +74,6 @@ body {
   position: absolute;
 }
 
-.father {
-  height: 100%;
-  width: 100%;
-  position: absolute;
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-  /* z-index : 3 ; */
-  Overflow: hidden;
-}
-
 .son {
   height: 70%;
   width: 70%;
@@ -97,7 +85,7 @@ body {
   /* z-index : 2 ; */
 }
 
-.baby1 {
+.children1 {
   height: 400%;
   width: 300%;
   border: 2px solid red;
@@ -109,12 +97,12 @@ body {
   transform: rotate(20deg); */
 }
 
-.baby1 > * {
+.children1 > * {
   border: 5px solid red;
   box-shadow: 0 0 50px red;
 }
 
-.baby2 {
+.children2 {
   height: 400%;
   width: 300%;
   border: 2px solid red;
@@ -126,7 +114,7 @@ body {
   transform: rotate(20deg); */
 }
 
-.baby2 > * {
+.children2 > * {
   border: 5px solid red;
   box-shadow: 0 0 50px red;
 }/*# sourceMappingURL=style.css.map */
