--- a/style/style.scss
+++ b/style/style.scss
@@ -8,7 +8,6 @@ body {
     margin: 0;
     padding: 0;
     overflow: hidden;
-    // transition: 1s background-color;
 }
 
 .score {
@@ -38,9 +37,7 @@ body {
     }
 }
 
-
 .popUp {
-    // border : 2em solid black ;
     height: 45vh;
     width: 45vh;
     border-radius: 50%;
@@ -66,14 +63,6 @@ body {
 
 }
 
-
-.errorScreen {
-    height: 100%;
-    width: 100%;
-    background-color: red;
-    display:none ;
-}
-
 /* --------------------- ANIMATED BACKGROUND ------------------- */
 
 .patchBabyHole   {
@@ -84,20 +73,7 @@ body {
     border-radius: 50% ;
     z-index : -1 ;
     position : absolute ;
-    // transition:  0.5s background-color;
 }
-
-// .father {
-//     height : 100% ;
-//     width : 100% ;
-//     position: absolute;
-//     display : flex ;
-//     flex-direction: row;
-//     justify-content: center;
-//     align-items: center;
-//     /* z-index : 3 ; */
-//     Overflow: hidden;
-// }
 
 .son {
     height : 70% ;
@@ -107,7 +83,6 @@ body {
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    /* z-index : 2 ; */
 }
 
 .children1 {
@@ -118,8 +93,6 @@ body {
     display : flex ; 
     justify-content: center;
     align-items: center;
-    /* -ms-transform: rotate(20deg);     IE 9
-    transform: rotate(20deg); */
 }
 
 .children1 > *{
@@ -135,8 +108,6 @@ body {
     display : flex ; 
     justify-content: center;
     align-items: center;
-    /* -ms-transform: rotate(20deg);     IE 9
-    transform: rotate(20deg); */
 }
 
 .children2 > *{
@@ -159,8 +130,8 @@ body {
     position: absolute;
 
     &__background {
-        height: 100%;
-        width: 100%;
+        height: 100vh;
+        width: 100vw;
         background-color: rgba(0, 0, 0, 0.281);
         position: absolute;
     }
@@ -172,37 +143,30 @@ body {
         justify-content: center;
         align-items: center;
         background-color: rgba(0, 0, 0, 0.548);
-
         
         .menu-box {
 
             &__background {
-                height: 80vmin;
-                width: 80vmin;
-                border-radius: 50%;
-                background-color: #000;
                 position: absolute;
+                display: flex;
+                justify-content: center;
+                align-items: center;
                 
                 .background {
+                    height: 80vmin;
+                    width: 80vmin;
+                    border: 4px dashed rgba(252, 247, 0, 0.712);
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    position: absolute;
+                    animation-name: spinY;
+                    animation-duration: 34s;
+                    animation-timing-function: ease-in-out;
+                    animation-iteration-count: infinite;
                     
-                    &__star {
-                        height: 80vmin;
-                        width: 80vmin;
-                        border: 4px dashed rgba(252, 247, 0, 0.712);
-                        display: flex;
-                        justify-content: center;
-                        align-items: center;
-                        position: absolute;
-                        animation-name: spinY;
-                        animation-duration: 34s;
-                        animation-timing-function: ease-in-out;
-                        animation-iteration-count: infinite;
-                        
-                        &:last-child {
-                            // transform: rotate(22.5deg);
-                            animation-name: spinX;
-                        }
-                        
+                    &:last-child {
+                        animation-name: spinX;
                     }
                     
                     &__square {
@@ -217,8 +181,107 @@ body {
                             width: 80vmin;
                         }
                     }
+                }
+            }
 
+            &__controls {
+                position: absolute;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                justify-content: center;
+                border-radius: 5vmin;
+                border: 2px solid rgb(224, 118, 19);
+                // border: 7px solid rgb(224, 118, 19);
+                // outline: 40px dashed rgba(252, 248, 0, 0.877);
+                height: 70vmin;
+                width: 70vmin;
+                border-radius: 50%;
+                background-color: #000;
+                padding: 10px;
+
+                .speed {
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: center;
+                    align-items: center;
+                    // padding: 10px;
+                    // margin-bottom: 2vh;
                     
+                    &__title {
+                        border-bottom: 2px solid #fff;
+                        color: #fff;
+                        display: flex;
+                        justify-content: center;
+                    }
+
+                    .selector {
+                        background-color:rgb(31, 192, 25);
+                        cursor: pointer;
+                    }
+
+                    .selector:nth-child(2) {
+                        background-color:rgb(236, 223, 30);
+                    }
+
+                    .selector:nth-child(3) {
+                        background-color:rgb(192, 78, 25);
+                    }
+                }
+
+                .colors {
+                    // border: 2px solid #fff;
+                    // display: grid;
+                    // grid-template-columns: 1fr 1fr;
+                    // gap: 7px;
+                    // padding: 10px;
+
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: center;
+                    align-items: center;
+       
+                    &__title {
+                        border-bottom: 2px solid #fff;
+                        color: #fff;
+                        display: flex;
+                        justify-content: center;
+                        margin-bottom: 15px;
+                    }
+
+                    &__handler-box {                        
+                        display: grid;
+                        grid-template-columns: 1fr 1fr;
+                        gap: 7px;
+                    }
+
+                    &__handler {
+                        background-color: red;
+                        border: 2px solid #000;
+                        outline: 2px solid red;
+                        cursor: pointer;    
+                    }
+
+                    &__handler:nth-child(2) {
+                        background-color: pink;
+                        border: 2px solid #fff;
+                        outline: 2px solid pink;
+                        color: #fff;
+                    }
+
+                    &__handler:nth-child(3) {
+                        background-color: green;
+                        border: 2px solid rgb(31, 192, 25);
+                        outline: 2px solid green;
+                        color: rgb(31, 192, 25);
+                    }
+                    
+                    &__handler:nth-child(4) {
+                        background-color: rgb(66, 105, 231);
+                        border: 2px solid rgb(23, 173, 161);
+                        outline: 2px solid rgb(233, 247, 38);
+                        color: rgb(233, 160, 252);
+                    }
                 }
             }
         }
@@ -234,3 +297,4 @@ body {
     from {transform: rotate(0deg);}
     to {transform: rotate(-360deg);}
   }
+  
