--- a/style/style.scss
+++ b/style/style.scss
@@ -128,6 +128,7 @@ body {
     height: 100vh;
     width: 100vw;
     position: absolute;
+    // display: none;
 
     &__background {
         height: 100vh;
@@ -281,6 +282,10 @@ body {
                         border: 2px solid rgb(23, 173, 161);
                         outline: 2px solid rgb(233, 247, 38);
                         color: rgb(233, 160, 252);
+                    }
+
+                    &__handler:hover {
+                        outline-width: 4px;
                     }
                 }
             }
