--- a/style/style.scss
+++ b/style/style.scss
@@ -75,14 +75,9 @@ body {
     justify-content: center;
     align-items: center;
 
-    .menu-handler--open {
-        position: absolute;
-        right: 0;
-        top: 0;
-    }
     
     .patchBabyHole   {
-    
+        
         height: 100px ;
         width: 100px ;
         background-color: red ;
@@ -90,7 +85,7 @@ body {
         z-index : -1 ;
         position : absolute ;
     }
-
+    
     .children1 {
         height : 400% ;
         width : 300% ;
@@ -121,13 +116,43 @@ body {
         box-shadow: 0 0 50px red;
     } 
     
-    .childrens {
-        width: 90% ;
-        height: 90% ;
-        position: absolute ;
-        display: flex ;
-        justify-content: center ;
-        align-items: center ;
+    // .childrens {
+    //     width: 90% ;
+    //     height: 90% ;
+    //     position: absolute ;
+    //     display: flex ;
+    //     justify-content: center ;
+    //     align-items: center ;
+    // }
+}
+.menu-handler--open {
+    position: absolute;
+    right: 2vmin;
+    top: 2vmin;
+    border: none;
+    background-color: #000;
+    border-radius: 1vmin;
+    padding: 1vmin;
+    display: none;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+
+    .line {
+        width: 1.2vw;
+        border: 1px solid white;
+        margin: 0.3vmin
+    }
+
+    &:hover {
+        
+        background-color: white;
+
+        .line {
+            
+        border-color: #000;
+        }
     }
 }
 
