--- a/style/style.css
+++ b/style/style.css
@@ -15,24 +15,37 @@ body {
   width: 80%;
   font-size: 2em;
   position: absolute;
-  bottom: 77%;
+  top: 10px;
   display: flex;
-  /* flex-wrap: wrap ; */
-  flex-direction: row;
   justify-content: center;
-  /* background-color: blueviolet; */
 }
-.score__hits {
-  max-width: 50%;
-  min-width: 50%;
-  text-align: right;
-  /* background-color: cadetblue; */
+.score .result-box {
+  height: 45px;
+  background-color: #000;
+  display: flex;
 }
-.score__fails {
-  max-width: 50%;
-  min-width: 50%;
-  text-align: left;
-  /* background-color: cornflowerblue; */
+.score .result-box:nth-child(1) {
+  border-bottom-left-radius: 22.5px;
+  border-top-left-radius: 22.5px;
+}
+.score .result-box:nth-child(2) {
+  border-bottom-right-radius: 22.5px;
+  border-top-right-radius: 22.5px;
+}
+.score .result-box__icon {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.score .result-box__result {
+  height: 30px;
+  width: 30px;
+  margin: 7.5px;
+  background-color: #fff;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .popUp {
@@ -59,8 +72,8 @@ body {
 
 /* --------------------- ANIMATED BACKGROUND ------------------- */
 .son {
-  height: 70%;
-  width: 70%;
+  height: 100%;
+  width: 100%;
   position: absolute;
   display: flex;
   flex-direction: row;
@@ -110,7 +123,7 @@ body {
   background-color: #000;
   border-radius: 1vmin;
   padding: 1vmin;
-  display: none;
+  display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
@@ -132,6 +145,7 @@ body {
   height: 100vh;
   width: 100vw;
   position: absolute;
+  display: none;
 }
 .menu__background {
   height: 100vh;
