--- a/style/style.scss
+++ b/style/style.scss
@@ -84,7 +84,7 @@ body {
 
 /* --------------------- ANIMATED BACKGROUND ------------------- */
 
-.son {
+.playBackground {
     height : 100% ;
     width : 100% ;
     position: absolute;
